--- a/code_templates/detection_rule_types.jinja2
+++ b/code_templates/detection_rule_types.jinja2
@@ -44,6 +44,7 @@ class DetectionRuleTypes(enum.Enum):
 
 {% for t in types %}
     {{ t.short_name }} = DetectionRuleType(**{{ t }})
+    """{{ t.name }} - {{ t.description }}"""
 {% endfor %}
     default = GENERIC  # type: ignore[attr-defined]
 
