Improve code generation

--- a/code_templates/data_fragment_types.jinja2
+++ b/code_templates/data_fragment_types.jinja2
@@ -42,7 +42,7 @@ class DataFragmentTypes(enum.Enum):
         Generic
     """
 
-{% for t in types %}
+{% for t in types|sort(attribute='short_name') %}
     {{ t.short_name }} = DataFragmentType(**{{ t }})
     """{{ t.name }} - {{ t.description }}"""
 {% endfor %}
