--- a/code_templates/actor_types.jinja2
+++ b/code_templates/actor_types.jinja2
@@ -41,7 +41,7 @@ class ActorTypes(enum.Enum):
         Generic
     """
 
-{% for t in types %}
+{% for t in types|sort(attribute='short_name') %}
     {{ t.short_name }} = ActorType(**{{ t }})
     """{{ t.name }} - {{ t.description }}"""
 {% endfor %}
