--- a/code_templates/artifact_types.jinja2
+++ b/code_templates/artifact_types.jinja2
@@ -1,7 +1,5 @@
 import enum
 
-from typing import Dict, Any
-
 from pydantic import field_validator
 
 from .base import CommonEntityType, load_entity_supported_types
@@ -75,7 +73,7 @@ class ArtifactTypes(enum.Enum):
         Generic
     """
 
-{% for t in types %}
+{% for t in types|sort(attribute='short_name') %}
     {{ t.short_name }} = ArtifactType(**{{ t }})
     """{{ t.name }} - {{ t.description }}"""
 {% endfor %}
