--- a/code_templates/detection_rule_types.jinja2
+++ b/code_templates/detection_rule_types.jinja2
@@ -42,7 +42,7 @@ class DetectionRuleTypes(enum.Enum):
         Generic
     """
 
-{% for t in types %}
+{% for t in types|sort(attribute='short_name') %}
     {{ t.short_name }} = DetectionRuleType(**{{ t }})
     """{{ t.name }} - {{ t.description }}"""
 {% endfor %}
