--- a/docs/_static/css/theme-extra.css
+++ b/docs/_static/css/theme-extra.css
@@ -6,6 +6,10 @@ p.caption {
     background-color: #7122dc;
 }
 
+.wy-nav-top  {
+    background-color: #7122dc;
+}
+
 h1, h2, a {
     color: #8c54d8;
 }
