--- a/docs/_templates/misp-type.tmpl
+++ b/docs/_templates/misp-type.tmpl
@@ -2,19 +2,19 @@
 
 
 {% for definition in data %}
-* ``{{definition.colander_type|upper}}`` - **MISP type**: :guilabel:`{{definition.misp_object}}`
+* ``{{definition.colander_type|upper}}`` - **MISP type**: :guilabel:`{{definition.misp_object}}{% if definition.misp_type %}: {{definition.misp_type}}{% endif %}`
   {% for key, value in definition.colander_misp_mapping.items() %}
   {% if key == "literals" %}
     {% for src, dst in value.items() %}
-  * *{{src}}* = "*{{dst}}*"
+  * :py:obj:`{{src}}` = "*{{dst}}*"
     {% endfor %}
   {% elif key == "misp_attributes" %}
   * MISP object attributes:
     {% for src, dst in value.items() %}
-    * *{{src}}* ↦ *{{dst}}*
+    * :py:obj:`{{options.data_type}}.{{src}}` ↦ :py:obj:`{{dst}}`
     {% endfor %}
   {% else %}
-  * *{{key}}* ↦ *{{value}}*
+  * :py:obj:`{{options.data_type}}.{{key}}` ↦ :py:obj:`{{value}}`
   {% endif %}
   {% endfor %}
 {% endfor %}
