--- a/docs/_static/css/theme-extra.css
+++ b/docs/_static/css/theme-extra.css
@@ -46,3 +46,53 @@ html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(
     border: 1px solid #d8d1e3;
     border-radius: 4px;
 }
+
+.textmono {
+    color: #4d4959;
+    font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,Courier,monospace;
+    font-size: 75%;
+}
+
+.textmonoborder {
+    color: #5e596c;
+    font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,Courier,monospace;
+    font-size: 70%;
+    padding: 2px 3px 2px 3px;
+    border: 1px solid #c9c6cc;
+    border-radius: 4px;
+    background-color: #ede7f7;
+}
+
+.colandertype {
+    color: #8c54d8;
+    font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,Courier,monospace;
+    font-size: 75%;
+    padding: 2px 3px 2px 0;
+    border: 1px solid #a88dce;
+    border-radius: 4px;
+    background-color: #ede7f7;
+}
+
+.colandertype .prefix {
+    color: #d8d1e3;
+    padding: 2px 4px 2px 2px;
+    margin-right: 4px;
+    background-color: #8c54d8;
+}
+
+.othertype {
+    color: #cf7f11;
+    font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,Courier,monospace;
+    font-size: 75%;
+    padding: 2px 3px 2px 0;
+    border: 1px solid #cf7f11;
+    border-radius: 4px;
+    background-color: #e3dbd1;
+}
+
+.othertype .prefix {
+    color: #e3dbd1;
+    padding: 2px 4px 2px 2px;
+    margin-right: 4px;
+    background-color: #cf7f11;
+}
