--- a/docs/_templates/colander-type.tmpl
+++ b/docs/_templates/colander-type.tmpl
@@ -6,22 +6,26 @@ Supported types
 .. collapse:: Details
 
     {% for item in data|sort(attribute='short_name') %}
-    ``{{item.short_name}}`` **{{item.name}}** - {{item.description}}
+    * :colandertype:`colander:{{item.short_name}}` **{{item.name}}**
+
+      *{{item.description}}*
     {% if item.default_attributes %}
-    Suggested extra properties:
-    ``{{ item.default_attributes.keys()|join(', ') }}``
+      * Suggested extra properties: {% for m in item.default_attributes.keys()|sort %}:textmonoborder:`{{m}}`  {% endfor %}
     {% endif %}
     {% if item.type_hints and item.type_hints.suggested_by_mime_types %}
-    Suggested MIME types:
-    {% for m in item.type_hints.suggested_by_mime_types.types|sort %}
-    * ``{{m}}``
-    {% endfor %}
+      * Suggested MIME types: {% for m in item.type_hints.suggested_by_mime_types.types|sort %}:textmonoborder:`{{m}}`  {% endfor %}
     {% endif %}
     {% endfor %}
 
 
 .. list-table::
+   :header-rows: 1
+
+   * - ID (short name)
+     - Name
+     - Description
    {% for item in data|sort(attribute='short_name') %}
-   * - ``{{item.short_name}}``
+   * - :colandertype:`colander:{{item.short_name}}`
+     - {{item.name}}
      - {{item.description}}
    {% endfor %}
