--- a/docs/_templates/misp-type.tmpl
+++ b/docs/_templates/misp-type.tmpl
@@ -4,7 +4,7 @@
 {% for definition in data %}
 
 {% if definition.misp_type %}
-* :colandertype:`colander:{{definition.colander_type|upper}}` mapped on :othertype:`{{definition.misp_object}}:{{definition.misp_type}}:`
+* :colandertype:`colander:{{definition.colander_type|upper}}` mapped on :othertype:`{{definition.misp_object}}:{{definition.misp_type}}`
 {% else %}
 * :colandertype:`colander:{{definition.colander_type|upper}}` mapped on :othertype:`misp-object:{{definition.misp_object}}`
 {% endif %}
@@ -12,13 +12,12 @@
   {% for key, value in definition.colander_misp_mapping.items() %}
   {% if key == "literals" %}
     {% for src, dst in value.items() %}
-  * "*{{dst}}*" ↦ :textmono:`{{src}}`
+  * :textmono:`"{{dst}}"` ↦ :textmono:`{{src}}`
     {% endfor %}
   {% elif key == "misp_attributes" %}
-  * Object attributes:
-    {% for src, dst in value.items() %}
-    * :textmono:`{{options.data_type}}.{{src}}` ↦ :textmono:`{{dst}}`
-    {% endfor %}
+  {% for src, dst in value.items() %}
+  * :textmono:`{{options.data_type}}.{{src}}` ↦ :textmono:`{{dst}}`
+  {% endfor %}
   {% else %}
   * :textmono:`{{options.data_type}}.{{key}}` ↦ :textmono:`{{value}}`
   {% endif %}
