WIP MISP and documentation

--- a/code_templates/artifact_types.jinja2
+++ b/code_templates/artifact_types.jinja2
@@ -93,3 +93,7 @@ class ArtifactTypes(enum.Enum):
                 return _artifact_type.value
         else:
             return cls.default.value
+
+    @classmethod
+    def suggest(cls, value: str) -> ArtifactType:
+        return cls.by_mime_type(value)
