--- a/code_templates/threat_types.jinja2
+++ b/code_templates/threat_types.jinja2
@@ -53,3 +53,7 @@ class ThreatTypes(enum.Enum):
         if sn in cls._member_names_:
             return cls[sn].value
         return cls.default.value
+
+    @classmethod
+    def suggest(cls, value: str) -> ThreatType:
+        return cls.by_short_name(value)
