--- a/code_templates/data_fragment_types.jinja2
+++ b/code_templates/data_fragment_types.jinja2
@@ -54,3 +54,7 @@ class DataFragmentTypes(enum.Enum):
         if sn in cls._member_names_:
             return cls[sn].value
         return cls.default.value
+
+    @classmethod
+    def suggest(cls, value: str) -> DataFragmentType:
+        return cls.by_short_name(value)
